finished etl stream module